@@ -2,7 +2,8 @@ OpenLDAP 2.3 Change Log
 
 OpenLDAP 2.3.19 Engineering
 	Fixed libldap disable DH key exchange with DH params (ITS#4354)
-	Fixed libldap_r pool destroy hang (ITS#4349)
+	Fixed libldap_r thread pool destroy hang (ITS#4349,ITS#4368)
+	Fixed slapd slap_daemon destroy issue (ITS#4370)
 	Fixed slapd-hdb livelock issue (ITS#4360)
 	Fixed slapd-bdb/hdb auto-recovery issue (ITS#4361)
 	Fixed slapd-bdb/hdb BDB 4.4 compatibility issues (ITS#4362)
